<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Better Open With</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_file_handler">Better Open With</string>
    <string name="complete_action_with">Complete Action With...</string>
    <string name="timeout">Default countdown time</string>
    <string name="timeoutSummary">Launch preferred app in %s seconds</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="paused">Paused</string>
    <string name="launching_in">Launching in %s seconds</string>
    <string name="disable">disable</string>
    <string name="select_preferred_app">Select Preferred App</string>
    <string name="action_feedback">Send feedback</string>
    <string name="crashToast">Please send the error report by clicking send in your email client</string>
    <string name="action_about">About</string>
    <string name="version">Version %s</string>
    <string name="copyright">Copyright</string>
    <string name="rights">All rights reserved</string>
    <string name="start_preferred">Start preferred app without showing list</string>
    <string name="set_time_message">Set time before preferred app will be launched. You can further customize this time in each file type\'s settings.</string>
    <string name="popup_options">Application Popup Options</string>
    <string name="layout">Layout</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="layout_summary">Available apps will be displayed as a %s</string>
    <string name="select_columns">Select number of columns</string>
    <string name="column_number">Number of columns in Grid</string>
    <string name="iconOnly">Show only icons, no text</string>
    <string name="textSize">Text size</string>
    <string name="small">Smaller</string>
    <string name="medium">Normal</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="action_all_apps">All my apps</string>
    <string name="no_app">No app found to handle %s</string>
    <string name="no_preferred_app">Preferred app not configured</string>
    <string name="iconOnlyOff">Select to hide app names</string>
    <string name="iconOnlyOn">Deselect to see app names and icons</string>
    <string name="countdown_time">Countdown time for this filetype: %s seconds</string>
    <string name="custom_countdown">Custom countdown time</string>
    <string name="use_default_timeout">Use default countdown time: %s seconds</string>
    <string name="custom_countdown_description">Set time before preferred app will be launched only for this filetype. You can change the default countdown time in the general settings.</string>
    <string name="not_handled">%1$s will not be handled with %2$s</string>
    <string name="confirm_disable">Disable handling %1$s with %2$s ?</string>
    <string name="confirm">Confirm</string>
    <string name="turned_off">Set OFF by user</string>
    <string name="app_seconds">%1$s (%2$ss.)</string>
    <string name="changelog">View Changelog</string>
    <string name="rate">Rate the app!</string>
    <string name="share">Share</string>
    <string name="share_text">Have a look at Better Open With</string>
    <string name="rate_me">Rate Me!</string>
    <string name="like">Like the app?</string>
    <string name="rateBanner">Rate Now</string>
    <string name="play_store">Cannot start Play Store</string>
    <string name="general_options">General Options</string>
    <string name="appLanguage">Select Application Language</string>
    <string name="language">Language</string>
    <string name="systemLocale">System Default</string>
    <string name="restartTitle">Restart required</string>
    <string name="localeRestart">The selected language will be applied when the application is restarted.</string>
    <string name="auto">auto: 0s</string>
    <string name="custom_countdown_description_site">Set time before preferred app will be launched only for this %s. You can change the default countdown time in the general settings.</string>
    <string name="file_type">file type</string>
    <string name="site">site</string>
    <string name="countdown_time_general">Countdown time for this %1$s - %2$s</string>
    <string name="specified_seconds">%ss</string>
    <string name="CannotHidePreferred">You cannot hide preferred app</string>
    <string name="CannotHideAll">You cannot hide all apps</string>
    <string name="CannotPreferrHidden">You cannot set hidden app as preferred</string>
    <string name="hint">Click star to set preferred app.\nClick eye to hide an app.</string>
    <string name="credits">Credits</string>
    <string name="app_idea">Thanks to reddit\'s %s, <b>who came up with the idea</b> for this app!</string>
    <string name="Translators">Translators</string>
    <string name="bottom">Bottom</string>
    <string name="middle">Middle</string>
    <string name="position">Popup Position</string>
    <string name="position_summary">Available apps will be displayed at the %s of the screen</string>
    <string name="animation">Animation</string>
    <string name="slideFromBottom">Slide Up</string>
    <string name="slideFromLeft">Slide Right</string>
    <string name="slideFromRight">Slide Left</string>
    <string name="slideNone">None</string>
    <string name="cannot_open_file">No application found to open the selected file</string>
    <string name="disableTimer">Disable countdown timer</string>
    <string name="disableTimerOff">Select to disable countdown timer</string>
    <string name="disableTimerOn">Deselect to enable countdown timer</string>
    <string name="toggle_app_visibility">Toggle app visibility</string>
    <string name="app_icon">App icon</string>
    <string name="edit_timeout">Edit Timeout</string>
    <string name="action_support">Support Developer</string>
    <string name="support">Thank you for supporting the developer of the app!</string>
</resources>