<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aboutmycode.betteropenwith.HandlerListActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_app_settings"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="@string/share" />
    <item
        android:id="@+id/action_rate"
        android:showAsAction="never"
        android:title="@string/rate_me" />
    <item
        android:id="@+id/action_support"
        android:showAsAction="never"
        android:title="@string/action_support" />
    <item
        android:id="@+id/action_feedback"
        android:showAsAction="never"
        android:title="@string/action_feedback" />
    <item
        android:id="@+id/action_all_apps"
        android:showAsAction="never"
        android:title="@string/action_all_apps" />
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />
</menu>
